<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingMenuForFullView"
    android:id="@+id/notContainerMenuSettingsText"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/settings_post"
            android:layout_marginTop="30dp"
            android:layout_gravity="end"
            android:layout_marginRight="39dp"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="end"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/customshare_setting_menu"

            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_marginTop="5dp">
                <TableRow>
                    <TextView
                        android:id="@+id/editPostFromTextMenu"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/edit_post_"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:layout_span="2"
                        android:gravity="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginTop="7dp">
                        <TextView
                            android:id="@+id/deletePostFromTextMenu"
                            android:layout_span="2"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_post"
                            android:textSize="15dp"
                            android:textColor="@color/black"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="7dp">
                    <TextView
                        android:layout_span="2"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_post"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        />
                </TableRow>
                <TableRow
                    android:layout_marginTop="7dp">
                    <TextView
                        android:layout_span="2"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        />
                </TableRow>

                <TableRow
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">
                        <TextView
                            android:layout_span="2"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:text="@string/info"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>