<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="true"
        android:background="#FFFFFF">

        <View
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/screen">

        </View>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/discover"
                    android:layout_width="240dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:text="@string/discover"
                    android:textAppearance="@style/discover"
                    android:gravity="center_horizontal"
                    />


                <AutoCompleteTextView

                    android:id="@+id/username"
                    android:layout_width="265dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="5dp"
                    android:alpha="0.8"
                    android:hint="@string/username"
                    android:shadowColor="@color/white"
                    android:textAppearance="@style/username"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />



                <EditText
                    android:backgroundTint="@color/white"
                    android:id="@+id/password"
                    android:layout_width="265dp"
                    android:layout_height="41dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:alpha="0.8"
                    android:shadowColor="@color/white"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebook_sign_in"
                        android:layout_width="21dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"

                        android:visibility="visible" />


                    <Button
                        android:id="@+id/twitter_sign_in"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/twitter_img"
                        android:visibility="visible" />
                    <Button
                        android:id="@+id/vk_sign_in"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/vk_img"
                        android:visibility="visible" />
                    <Button
                        android:id="@+id/snapchat_sign_in"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/snapchat_img"
                        android:visibility="visible" />
                    <Button
                        android:id="@+id/google_sign_in"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/google_img"
                        android:visibility="visible" />
                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login"
                    android:visibility="visible" />
                <TextView
                    android:id="@+id/create_acco"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/create_acco"
                    android:textAppearance="@style/create_acco"
                    android:gravity="center_horizontal"
                    />

            </LinearLayout>
        </LinearLayout>





    </RelativeLayout>

</LinearLayout>