<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="true"
        android:background="#FFFFFF">

        <View
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/screen">

        </View>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="26.78dp"
            android:layout_alignParentLeft="true"

            android:layout_alignParentTop="true"
            android:layout_marginTop="-24dp"
            android:background="#00000000">

            <View
                android:id="@+id/status_bar_"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/status_bar_" />
        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/downbar"
            android:layout_width="32dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="190dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="690dp"
            android:background="#00000000"
            android:layout_alignParentStart="true">

            <View
                android:id="@+id/rectangle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rectangle"
                android:visibility="visible" />

            <View
                android:id="@+id/vector1"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="-92.75dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-1dp"
                android:background="@drawable/vector"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-92.75dp" />

            <View
                android:id="@+id/rectangle_2"
                android:layout_width="411dp"
                android:layout_height="27dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="-190dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-10dp"
                android:background="@drawable/rectangle_2"
                android:layout_marginStart="-190dp"
                android:layout_alignParentStart="true" />
        </RelativeLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discover"
                android:layout_width="240dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="375dp"
                android:text="@string/discover"
                android:textAppearance="@style/discover"
                android:gravity="center_horizontal"
                />


                <EditText

                    android:id="@+id/username"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginTop="5dp"
                    android:alpha="0.8"
                    android:autofillHints="@string/username"
                    android:hint="@string/username"
                    android:outlineSpotShadowColor="@color/white"
                    android:shadowColor="@color/white"
                    android:textAppearance="@style/username"
                    android:backgroundTint="@color/white"

                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />



                <EditText
                    android:backgroundTint="@color/white"

                    android:id="@+id/password"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:alpha="0.8"
                    android:outlineSpotShadowColor="@color/white"
                    android:shadowColor="@color/white"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/google_sign_in"
                    android:layout_width="20dp"
                    android:layout_height="20dp"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"

                    android:background="@drawable/google_img"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/snapchat_sign_in"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/snapchat_img"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/vk_sign_in"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/vk_img"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/twitter_sign_in"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/twitter_img"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/facebook_sign_in"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/facebook_img"
                    android:visibility="visible" />
            </LinearLayout>
            <Button
                android:id="@+id/login"
                android:layout_marginTop="5dp"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:background="@drawable/login"
                android:visibility="visible" />
            <TextView
                android:id="@+id/create_acco"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"

                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/create_acco"
                android:textAppearance="@style/create_acco"
                android:gravity="center_horizontal"
                />

        </LinearLayout>



    </RelativeLayout>


</android.support.constraint.ConstraintLayout>